--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Exercicis - React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
